# CLI

./: .gitignore  Cargo.toml  Config.toml  manifest.json  manifest.toml
.github/workflows/: release.yml
src/: init.rs  main.rs  model.rs
src/cli/: account.rs  add.rs  build.rs  init.rs  logo.rs  mod.rs
src/cli/auth/: create.rs  delete.rs  login.rs  logout.rs  mod.rs
