[package]
name = "customs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
crossterm = "0.27.0"
dialoguer = "0.11.0"
directories = "5.0.1"
git2 = "0.18.2"
http = "1.1.0"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.11"
