[package]
name = "customs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
crossterm = "0.27.0"
dialoguer = "0.11.0"
directories = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
zip = "0.5"
walkdir = "2.3"
regex = "1.5.4"
glob = "0.3.0"


