[package]
name = "swiffty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
crossterm = "0.27.0"
dialoguer = "0.11.0"
directories = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
git2 = "0.13"
zip = "0.5"
ignore = "0.4"
walkdir = "2.3.1" 
semver = "0.11"


